--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
+    <link rel="stylesheet" type="text/css" href="./mystyle.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>React App</title>
   </head>
     <body >
